--- a/index.html
+++ b/index.html
@@ -9,12 +9,15 @@
     <link rel="stylesheet" href="./src/styles/main.css">
 </head>
 <body>
+    <header>
+        <h1>Pablo & Victória</h1>
+        <h2>26/11/2022</h2>
+    </header>
     <main>
         <h2>JOGO DA MEMÓRIA</h2>
         <div class="game"></div>
         <button class="reset" onclick="window.location.reload()">RESET GAME</button>
     </main>
-
     <!-- JavaScript -->
     <script defer src="./src/scripts/engine.js"></script>
 </body>
