modificações visuais melhoradas

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <h1>Pablo & Victória</h1>
+        <h1>Pablo ❤ Victória</h1>
         <h2>26/11/2022</h2>
     </header>
     <main>
