--- a/index.html
+++ b/index.html
@@ -13,11 +13,15 @@
         <h1>Pablo ❤ Victória</h1>
         <h2>26/11/2022</h2>
     </header>
-    <main>
+    <main id="game">
         <h2>JOGO DA MEMÓRIA</h2>
         <div class="game"></div>
         <button class="reset" onclick="window.location.reload()">RESET GAME</button>
     </main>
+    <div id="startMenu">
+        <button class="startMenu" onclick="startGame()">Jogar</button>
+        <button class="startMenu" onclick="viewInstructions()">Instruções</button>
+    </div>
     <!-- JavaScript -->
     <script defer src="./src/scripts/engine.js"></script>
 </body>
