--- a/index.html
+++ b/index.html
@@ -13,7 +13,17 @@
         <h1>Pablo ❤ Victória</h1>
         <h2>26/11/2022</h2>
     </header>
-    <main id="game">
+    <main id="gameContainer">
+        <div class="points__container">
+            <div class="move__points points">
+                <p>Movimentos:</p>
+                <p id="movePoints">0</p>
+            </div>
+            <div class="timer points">
+                <p>Tempo:</p>
+                <p id="timerPoints">00:00</p>
+            </div>
+        </div>
         <h2>JOGO DA MEMÓRIA</h2>
         <div class="game"></div>
         <button class="reset" onclick="window.location.reload()">RESET GAME</button>
